[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-simulation"
version = "0.1.0"
description = "Monte Carlo option pricing starter project for quant internship prep."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Elija" }
]

[project.scripts]
monte-carlo-sim = "monte_carlo_simulation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
