[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-simulation"
version = "0.1.0"
description = "Quant-focused Monte Carlo research toolkit with variance reduction, basket options, American exercise, and scenario studies."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Elija" }
]
keywords = ["quant-finance", "monte-carlo", "options-pricing", "derivatives", "risk"]
dependencies = [
  "numpy>=2.0"
]

[project.urls]
Homepage = "https://github.com/elijasms-dev/Monte-Carlo-Simulation"

[project.scripts]
monte-carlo-sim = "monte_carlo_simulation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
